# random

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
cmake/: mattsep-random-config.cmake.in  msep-config.cmake.in
include/mattsep/random/: concepts.hpp  distributions.hpp  engines.hpp  internal.hpp  random.hpp  rng.hpp  traits.hpp  type_traits.hpp
include/mattsep/random/distributions/: uniform.hpp
include/mattsep/random/engines/: jsf.hpp  sfc.hpp
include/mattsep/random/internal/: bitops.hpp  types.hpp
tests/: CMakeLists.txt  main.cpp  rng_test.cpp
tests/engines/: jsf_test.cpp  sfc_test.cpp
